--- a/titans-rest/Dockerfile
+++ b/titans-rest/Dockerfile
@@ -1,14 +1,14 @@
 #
 # Build stage
 #
-FROM maven:3.8-openjdk-20 AS build
+FROM jelastic/maven:3.8.6-openjdk-20.ea-b24 AS build
 COPY . .
 RUN mvn clean package
 
 #
 # Package stage
 #
-FROM openjdk:11-jdk-slim
+FROM openjdk:20.ea-b24
 COPY --from=build /target/titans-rest-0.0.1-SNAPSHOT.jar titans-rest.jar
 # ENV PORT=8080
 EXPOSE 8080
