changed open jdk version

--- a/titans-rest/Dockerfile
+++ b/titans-rest/Dockerfile
@@ -8,7 +8,7 @@ RUN mvn clean package
 #
 # Package stage 
 #
-FROM openjdk:20-ea-b24
+FROM openjdk:20-jdk-slim
 COPY --from=build /target/titans-rest-0.0.1-SNAPSHOT.jar titans-rest.jar
 # ENV PORT=8080
 EXPOSE 8080
